--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="uk-navbar-right">
           <div class="uk-navbar-item">
-            <a href="docs/resume.pdf">
+            <a href="docs/drew-gurley-resume.pdf">
               <span uk-icon="icon: cloud-download"></span> download resume
             </a>
           </div>
@@ -75,7 +75,7 @@
                 <a class="uk-button uk-button-text" href="mailto:&#109;&#114;&#100;&#114;&#101;&#119;&#103;&#117;&#114;&#108;&#101;&#121;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109">Contact</a>
               </div>
               <div>
-                <a class="uk-button uk-button-text" href="docs/resume.pdf">View Resume</a>
+                <a class="uk-button uk-button-text" href="docs/drew-gurley-resume.pdf">View Resume</a>
               </div>
             </div>
           </article>
